--- a/css/main.css
+++ b/css/main.css
@@ -87,3 +87,22 @@ footer {
 */
 
 /* Write your CSS here */
+
+figure {
+  float: right;
+  width: 300px;
+  margin-right: -150px;
+}
+
+figcaption {
+  font-style: italic;
+}
+
+blockquote {
+  float: left;
+  width: 300px;
+  margin: -150px;
+  font-size: 1.5rem;
+  color: #666;
+  text-align: right;
+}
